fix: fix page 404 bug
Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/png" href="/src/assets/logo-white.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yuluo's Blog</title>
+    <script>
+      (function () {
+        var redirect = sessionStorage.getItem('spa-redirect');
+        if (redirect) {
+          sessionStorage.removeItem('spa-redirect');
+          window.history.replaceState(null, '', redirect);
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
